# git-hooks

./: .gitignore  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml
core/hooks/: pre-commit
src/hooked/: __init__.py  __main__.py  main.py
src/hooked/data/git_hooks/: pre-commit
